public/css/auth.css
body{
    font-family: "Nunito Sans", sans-serif;
    font-weight: 600;
    font-size: 0.9rem;
}

.container {
    max-width: 855px!important; 
}

.navbar {
    padding: 0.50rem 0;
    font-size: 1rem;
}

.card-header {
    font-size: 1rem;
}
.navbar-dark {
    background-color: #414755;
}

.login-with-btn {
    background-color: rgba(64,87,109,.07);
    color: #000;
    border-color: rgba(64,87,109,.07);
    position: relative;    
    font-size: 1rem;
}

.login-with-btn::before {
    content: '';
    position: absolute;
    top: 50%;
    left: 30px;
    transform: translate(-50%,-50%);
    height: 25px;
    width: 25px; 
    background-image: url('../images/google.png');
    background-size: cover;
    display: inline-block;
    z-index: 1;
}

.login-with-btn:hover  {
    background-color: rgba(57,76,96,.15);
    color: #000;
    border-color: rgba(57,76,96,.15);
}

.card-body {
    padding-bottom: 2.3rem;
}

.navbar-brand {
    font-size: 1.45rem; 
    font-weight: 500!important;
    margin-top: -3px;
}

.divider hr {
    width: 100%;
    margin: 0;
}

.divider {
    align-items: center;
}

.divider span {
    padding: 10px;
    font-size: 0.9rem;
    opacity: 0.5;
}

.btn {
    font-size: 1rem;
}

p {
    font-weight: normal;
    font-size: 1rem;
}

main {
    min-height: 78vh;
    margin-bottom: 20px;
}
footer {
    background-color: #fff;
    padding:2.5em 0;
}

footer p {
    margin: 0;
}

.navbar-expand-md .navbar-nav .nav-item {
    padding: 0.25rem 0.5rem;
}
.navbar-expand-md .navbar-nav .nav-link {
    padding-left: 0;
    padding-right: 0;
    border-bottom: .25rem solid transparent;
}

.navbar-expand-md .navbar-nav .nav-link.active {
    color: #fff;
    border-color: #fff;
}

.navbar-expand-md .navbar-nav .nav-link.active:hover {
    border-bottom-color: rgba(255, 255, 255, .25);
}

